# Hackathon-The_Evolution_of_Todo

./: .gitignore  README.md  pyproject.toml  start.bat
.specify/memory/: constitution.md
Phase 1/: .gitignore  pyproject.toml
Phase 1/history/prompts/constitution/: 1-create-todo-constitution.constitution.prompt.md
Phase 1/history/prompts/todo-phase-1/: 2-create-all-feature-specs.spec.prompt.md  4-create-basic-level-tasks.tasks.prompt.md  5-implement-add-task-feature.green.prompt.md
Phase 1/specs/3-update-task/: tasks.md
Phase 1/specs/5-mark-as-complete/: tasks.md
Phase 1/src/: __init__.py  todo.py
Phase-2/frontend/: .env.local
Phase-2/specs/1-add-task/: tasks.md
Phase-2/specs/2-delete-task/: plan.md  tasks.md
Phase-2/specs/4-view-task-list/: plan.md  tasks.md
Phase-2/specs/5-mark-as-complete/: plan.md
Phase-2/specs_history/: v1.0.0_add-task.spec.md  v1.0.0_delete-task.spec.md  v1.0.0_mark-as-complete.spec.md  v1.0.0_update-task.spec.md  v1.0.0_view-task-list.spec.md
backend/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml  requirements.txt  todo_app.db
backend/auth/: jwt_handler.py
backend/database/: database.py
backend/models/: task.py  user.py
backend/routes/: auth.py  tasks.py
backend/src/: __init__.py  main.py
backend/src/api/: deps.py
backend/src/api/routes/: auth.py  todos.py
backend/src/core/: config.py  database.py  security.py
backend/src/models/: __init__.py  todo.py  user.py
backend/src/schemas/: auth.py  todo.py
backend/src/services/: auth_service.py  todo_service.py
backend/tests/: conftest.py
backend/utils/: validators.py
frontend/: .env.local  .eslintrc.json  .gitignore  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_STATUS.md  PHASE_3_COMPLETE.md  README.md  SETUP_NOTES.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/.next/dev/: prerender-manifest.json  trace
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Navbar.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/config/: design-tokens.ts  site.ts
frontend/src/styles/: globals.css  variables.css
frontend/src/types/: api.ts  auth.ts  index.ts  todo.ts
history/prompts/backend-api/: 008-backend-api-specification-creation.spec.prompt.md  009-backend-api-implementation-plan.plan.prompt.md  (+2 more)
specs/1-add-task/: plan.md
specs/1-frontend-ui/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-phase1-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-backend-api/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-phase2-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-premium-saas-ui/: plan.md  research.md  spec.md  tasks.md
specs/3-update-task/: plan.md
src/: main.py  test_manual.py
src/todo_app/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_task_service.py
tests/unit/: __init__.py  test_task.py  test_task_service.py
(+159 files in other folders)
