[project]
name = "todo-phase-1"
version = "0.1.0"
description = "In-memory Python console Todo app - Phase 1 MVP"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["todo", "console", "cli", "mvp"]

[project.scripts]
todo = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
