[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-backend"
version = "0.1.0"
description = "Backend API for Todo Full-Stack Web Application"
readme = "README.md"
authors = [{name = "Developer", email = "developer@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "better-exceptions>=0.3.2",
    "python-multipart>=0.0.20",
    "psycopg2-binary==2.9.9",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["*", "*.*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
]